[package]
name = "boltz_rust"
description = "a boltz client for swaps between BTC/LBTC & LN"
version = "0.1.4"
edition = "2021"
license="MIT"

[lib]
name = "boltz_rust"
path = "src/lib.rs"
doctest = false
crate-type = ["staticlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
ureq = {version = "2.8.0", features = ["json"]}
bip39 = "2.0.0"
electrum-client = "0.19.0"
bitcoin = {version = "0.31.1", features = ["rand", "base64", "rand-std"]}
elements = { version = "0.24.0", features = ["serde"] }
lightning-invoice = "0.26.0"

[dev-dependencies]
bitcoind = {version = "0.34.1", features = ["25_0"] }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []
