[package]
name = "boltz_rust"
description = "a boltz client for swaps between BTC/LBTC & LN"
version = "0.1.6"
edition = "2021"
license="MIT"

[lib]
name = "boltz_rust"
path = "src/lib.rs"
doctest = false
crate-type = ["staticlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
ureq = { version = "2.9.7", features = ["json", "native-tls"] }
bip39 = "2.0.0"
electrum-client = "0.19.0"
bitcoin = {version = "0.31.2", features = ["rand", "base64", "rand-std"]}
elements = { version = "0.24.0", features = ["serde"] }
lightning-invoice = "0.30.0"
tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
url = "2.5.0"
log = "^0.4"
env_logger = "0.7"
native-tls = "0.2.11"

[patch.crates-io]
secp256k1-zkp = {git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d"}

[dev-dependencies]
bitcoind = {version = "0.34.1", features = ["25_0"] }
elementsd = {version  = "0.9.1", features = ["22_1_1"] }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []
