[package]
name = "boltz-dart"
authors = ["i5hi <ishi@satoshiportal.com>, mocodesmo <morteza@satoshiportal.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "boltz_dart"
# path = "src/api.rs"
doctest = false
crate-type = ["staticlib", "cdylib", "lib"] 

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build]
profiler = true

[dependencies]

boltz-client = { path = "../../boltz-client" }
flutter_rust_bridge = "1.82.6"